# charz-rust

./: .gitignore  DOCS.md  README.md  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs
src/charz_rust/: __init__.py
src/tests/: test_integrity.py
